--- a/src/components/UserForm/index.css
+++ b/src/components/UserForm/index.css
@@ -414,7 +414,17 @@
     margin-bottom: 0px;
     padding-bottom: 0px;
   }
+  .mobile-width{
+    width: 100%;
+  }
 
+  .table-border2{
+    width: auto;
+  }
+
+  .table-border{
+    width: auto;
+  }
   .second-section-container {
     display: flex;
     flex-direction: column;
@@ -450,11 +460,12 @@
 }
 
   .section-header {
-    width: 40%;
+    width: auto;
     margin-left: 15px;
     text-align: left;
     border: 1px solid black;
     margin-bottom: 0px;
+    margin-right: 15px;
   }
   .table-border3,
   .table-border3 th,
@@ -465,9 +476,10 @@
     text-align: left;
     padding-right: 0px;
     margin-right: 0px;
-    width: 350px;
+    width: 100%;
     font-size: small;
     margin-top: 05px;
+    padding-right: 5px;
   }
   .table-border4,
   .table-border4 th,
@@ -478,7 +490,7 @@
     text-align: left;
     padding-left: 5px;
     margin-left: 0px;
-    width: 350px;
+    width: 100%;
     font-size: small;
     margin-top: 05px;
   }
@@ -489,6 +501,7 @@
 
     padding-bottom: 0px;
     width: auto;
+    
   }
 
 
@@ -524,6 +537,7 @@
   .table-border5 {
     display: block;
     width: 100%;
+    margin-bottom:5px; 
   }
 
   .table-border5 th,
@@ -531,6 +545,7 @@
     display: block;
     padding: 8px;
     margin-bottom: 8px;
+  
     
   }
 
@@ -570,8 +585,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-
-
     margin-left: 0px;
   }
 
@@ -607,3 +620,5 @@
   margin-right: 15px;
   margin-left : 15px;
 }  
+
+
